# Praxis

./: .dockerignore  .gitignore  .hf-rebuild  Dockerfile  README.md  inference.py  mock_validator.py  openenv.yaml  pyproject.toml
docs/: README.md  action-space.md  api-reference.md  configuration.md  contributing.md  deployment.md  getting-started.md  observation-space.md  tasks.md
praxis_env/: __init__.py  client.py  models.py
praxis_env/scenarios/: __init__.py  ambiguous_incident.py  base.py  cascading_failure.py  memory_leak_scenario.py  single_service_alert.py
server/: __init__.py  app.py  command_parser.py  praxis_environment.py  requirements.txt  reward.py
tests/: __init__.py  test_api_reset.py  test_command_parser.py  test_environment.py  test_imports.py  test_inference.py  test_models.py  test_reward.py  test_scenarios.py  test_task1_single_service_alert.py  test_task2_cascading_failure.py  test_task3_ambiguous_incident.py  test_task4_memory_leak.py
